--- a/src/sass/lib/_variables.sass
+++ b/src/sass/lib/_variables.sass
@@ -1,13 +1,14 @@
 // font variables
-+font('pf_bold', 'pfdindisplaypro-bold_0-webfont');
-+font('pf_medium', 'pfdindisplaypro-med_0-webfont');
-+font('pf_regular', 'pfdindisplaypro-reg_0-webfont');
++font('pf_bold', 'pfdindisplaypro-bold');
++font('pf_medium', 'pfdindisplaypro-med');
++font('pf_regular', 'pfdindisplaypro-reg');
 
 // color variables
 $white: #fff
 $black: #000
 $prime-color: #b6c527;
 $grey: #d1d1d1;
+$font_size: 10px;
 
 $font_m: 'pf_medium';
 $font_r: 'pf_regular';
