--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -177,7 +177,11 @@
         <div class="read-other__close" id="transport_open">
           <h3>Автобусы, Троллейбусы</h3>
           <p>34 3643 783742</p>
-        </div><br><a class="read-other read-other_black">Автомобиль</a>
+        </div><br><a class="read-other read-other_black" id="auto">Автомобиль</a>
+        <div class="read-other__close" id="auto_open">
+          <h3>Автобусы, Троллейбусы</h3>
+          <p>34 3643 783742</p>
+        </div>
       </div>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
