--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -97,8 +97,10 @@ block content
 			h3 Автобусы, Троллейбусы
 			p 34 3643 783742
 		br
-		a.read-other.read-other_black Автомобиль
-
+		a.read-other.read-other_black#auto Автомобиль
+		div.read-other__close#auto_open
+			h3 Автобусы, Троллейбусы
+			p 34 3643 783742
 	include includes/_footer
 	
 
