--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -5,10 +5,13 @@
 // @import lib/svgfont
 @import lib/variables
 @import lib/slick
+@import lib/fancybox
 
 
 //
+@import primary
 @import fonts
 @import main
+@import galery
 @import menu
 @import media
