--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -19,3 +19,4 @@ html
       block content
     //END out
     script(src="js/app.js")
+    script(src="https://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript")
