--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -1,8 +1,10 @@
 @media (max-width: 610px) {
+	// html {
+	// 	font-size: 7px;
+	// }
 	.btn {
 		padding: 20px 50px;
 		text-align: center;
-		
 	}
 	.wrapp-house__ipad {
 		display: none;
@@ -65,6 +67,18 @@
 		h2 {
 			font-size: 2.5rem;
 		}
+	}
+	.slider-custom2 .slide__item2 {
+		padding: 0;
+	}
+
+
+
+	// --------------
+	// foto_galerias
+	// --------------
+	.wrapp_foto_galerias .foto_galerias-item {
+		width: 100%;
 	}
 	
 }
