'add_page_about_and_price'

--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -52,15 +52,15 @@
       </header>
       <section class="title-slider">
               <div class="slider-init slider-custom1" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
-                      <div class="slide__item"><img src="img/slide1.jpg">
-                        <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2>
-                      </div>
-                      <div class="slide__item"><img src="img/slide1.jpg">
-                        <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2>
-                      </div>
-                      <div class="slide__item"><img src="img/slide1.jpg">
-                        <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2>
-                      </div>
+                <div class="slide__item"><img src="img/slide1.jpg">
+                  <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2>
+                </div>
+                <div class="slide__item"><img src="img/slide1.jpg">
+                  <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2>
+                </div>
+                <div class="slide__item"><img src="img/slide1.jpg">
+                  <h2>Красивые, счастливые и интересные – это ваши новые соседи!</h2>
+                </div>
               </div>
       </section>
       <section class="title-advantages">
@@ -88,58 +88,60 @@
                   <button class="btn btn-black_noactive btn-tab_right ">Сосновый</button></a>
         </div>
         <div class="tabs-content">
-          <h3>Кедровы квартал</h3>
-          <p>Кедровый &mdash; первый из 11 кварталов Новой Боровой. На сегодняшний день построено 3 дома.	</p>
-          <div class="wrapp-house wrapp-house__ipad">
-                    <div class="house">
-                      <h4 class="house-title">Дом 6</h4>
-                      <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a src="">
-                              <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
+          <div class="tab-kedr">
+            <h3>Кедровы квартал</h3>
+            <p>Кедровый &mdash; первый из 11 кварталов Новой Боровой. На сегодняшний день построено 3 дома.	</p>
+            <div class="wrapp-house wrapp-house__ipad">
+                      <div class="house">
+                        <h4 class="house-title">Дом 6</h4>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a src="">
+                                <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
+                      </div>
+                      <div class="house">
+                        <h4 class="house-title">Дом 6</h4>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a src="">
+                                <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
+                      </div>
+                      <div class="house">
+                        <h4 class="house-title">Дом 6</h4>
+                        <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a src="">
+                                <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
+                      </div>
+            </div>
+            <div class="wrapp-house wrapp-house__iphone">
+                    <div class="slider-init slider-custom2 slider-custom3" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
+                      <div class="slide__item2">
+                        <h4>Дом 6</h4>
+                        <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                      </div>
+                      <div class="slide__item2">
+                        <h4>Дом 6</h4>
+                        <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                      </div>
+                      <div class="slide__item2">
+                        <h4>Дом 6</h4>
+                        <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
+                      </div>
                     </div>
-                    <div class="house">
-                      <h4 class="house-title">Дом 6</h4>
-                      <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a src="">
-                              <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
-                    </div>
-                    <div class="house">
-                      <h4 class="house-title">Дом 6</h4>
-                      <p class="house-descript">(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg" alt="alt"><a src="">
-                              <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
-                    </div>
-          </div>
-          <div class="wrapp-house wrapp-house__iphone">
-                  <div class="slider-init slider-custom2 slider-custom3" data-slick="{&quot;slidesToShow&quot;:1, &quot;slidesToScroll&quot;:1, &quot;arrows&quot;:&quot;false&quot;}">
-                          <div class="slide__item2">
-                            <h4>Дом 6</h4>
-                            <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
-                          </div>
-                          <div class="slide__item2">
-                            <h4>Дом 6</h4>
-                            <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
-                          </div>
-                          <div class="slide__item2">
-                            <h4>Дом 6</h4>
-                            <p>(9.6 по генплану), 19 этажей</p><img src="img/slide2.jpg">
-                          </div>
-                  </div>
+            </div>
           </div>
         </div>
       </section>
       <section class="title-news">
         <h3 class="new-title">Новости </h3>
               <div class="slider-init slider-custom2" data-slick="{&quot;slidesToShow&quot;:2, &quot;slidesToScroll&quot;:2, &quot;arrows&quot;:&quot;true&quot;}">
-                      <div class="slide__item2"><img src="img/slide2.jpg">
-                        <p>2 декабря 2016</p>
-                        <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4>
-                      </div>
-                      <div class="slide__item2"><img src="img/slide2.jpg">
-                        <p>2 декабря 2016</p>
-                        <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4>
-                      </div>
-                      <div class="slide__item2"><img src="img/slide2.jpg">
-                        <p>2 декабря 2016</p>
-                        <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4>
-                      </div>
+                <div class="slide__item2"><img src="img/slide2.jpg">
+                  <p>2 декабря 2016</p>
+                  <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4>
+                </div>
+                <div class="slide__item2"><img src="img/slide2.jpg">
+                  <p>2 декабря 2016</p>
+                  <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4>
+                </div>
+                <div class="slide__item2"><img src="img/slide2.jpg">
+                  <p>2 декабря 2016</p>
+                  <h4>От 17,5% на 20 лет: уникаль-ный кредит на жилье в НБ</h4>
+                </div>
               </div>
       </section>
       <section class="title-about">
