--- a/src/pug/map.pug
+++ b/src/pug/map.pug
@@ -12,6 +12,10 @@ block content
 			a(href='/' style) Главная 
 		li
 			a(href='/foto-gallery.html') Фотогалерея
+		li
+			a(href='/about-quarter.html') О квартале
+
+			
 
 	include includes/_footer
 	
