--- a/src/sass/_galery.scss
+++ b/src/sass/_galery.scss
@@ -50,10 +50,15 @@
 		text-transform: uppercase;
 		color: $prime-color;
 		text-decoration: none;
+		letter-spacing: 2px;
 		svg {
 			fill: $prime-color;
 			width: 30px;
 			height: 15px;
 		}
 	}
+}
+
+.slider-init-2_1 {
+	
 }
