--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -38,3 +38,9 @@ ul { list-style-type: none; }
 .out {
 	width: 100%;
 }
+.__margin-20 {
+	margin: 0 20px;
+} 
+.no_margin {
+	margin: 0 !important;
+}
