--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -22,6 +22,7 @@
       <ul>
         <li><a href="/" style="true">Главная </a></li>
         <li><a href="/foto-gallery.html">Фотогалерея</a></li>
+        <li><a href="/about-quarter.html">О квартале</a></li>
       </ul>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
