'add_page_loyalty'

--- a/bitrix/templates/main/loyalty-program.html
+++ b/bitrix/templates/main/loyalty-program.html
@@ -50,45 +50,49 @@
         </div>
         <h3 class="header__text-iphone">+375 29 000 00 00</h3>
       </header>
-      <section class="title-logo_quarter">
-        <div class="logo_quarter"><img src="img/kedr_logo.png" alt="Кедровый квартал"></div>
-      </section>
       <nav class="title-breadcrumbs">
         <ul class="breadcrumbs">
           <li> <a>Главная /</a></li>
         </ul>
       </nav>
-      <section class="title-price_contact">
-        <div class="wrapp_price_contact __margin-20">
-          <h4>Цены и условия</h4>
-          <p>Уважаемые клиенты, подробную информацию о стоимости, наличии квартир и условиях покупки вы можете узнать по телефонам колл-центра:</p>
-          <ul>
-            <li>+375 29 300-00-00 </li>
-            <li>+375 29 1-328-328</li>
-            <li>+375 29 555-000-0</li>
-          </ul>
+      <section class="title-loyalty_text">
+        <div class="wrapp_loyalty_text __margin-20">
+          <h3>Программа лояльности</h3><img src="img/banner_loyalty.jpg" alt="Программа лояльности">
+          <p>Каждый покупатель квартиры в Новой Боровой становится обладателем «Карты жителя», которая предоставляет уникальную возможность получать скидки и специальные условия на товары и услуги наших партнеров. Подробная информация об условиях сотрудничества и актуальный список участников программы всегда доступны на этой странице. Список наших партнеров постоянно будет увеличиваться. Следите за нашими новостями.</p>
         </div>
       </section>
-      <section class="title-price_house">
-        <div class="wrapp-house __margin-20 wrapp-house_price">
-                  <div class="house">
-                    <h4 class="house-title">Дом 6</h4>
-                    <p class="house-descript no_margin">(9.6 по генплану), 19 этажей</p>
-                    <p class="house-descript">Срок сдачи: сдан в 1 квартале 2016 </p><img src="img/slide2.jpg" alt="alt"><a src="">
-                            <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
-                  </div>
-                  <div class="house">
-                    <h4 class="house-title">Дом 6</h4>
-                    <p class="house-descript no_margin">(9.6 по генплану), 19 этажей</p>
-                    <p class="house-descript">Срок сдачи: сдан в 1 квартале 2016 </p><img src="img/slide2.jpg" alt="alt"><a src="">
-                            <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
-                  </div>
-                  <div class="house">
-                    <h4 class="house-title">Дом 6</h4>
-                    <p class="house-descript no_margin">(9.6 по генплану), 19 этажей</p>
-                    <p class="house-descript">Срок сдачи: сдан в 1 квартале 2016 </p><img src="img/slide2.jpg" alt="alt"><a src="">
-                            <button class="btn btn-green btn-uppercase btn-center">подобрать по параметрам</button></a>
-                  </div>
+      <section class="title-loyalty_list">
+        <div class="wrapp_loyalty_list __margin-20">
+          <h4>Список участников</h4>
+          <ul>
+                    <li>
+                      <div>
+                        <p>Кухни Зов</p><a class="links" href="www.zov-minsk.by" target="_blank">www.zov-minsk.by</a>
+                      </div>
+                      <div>
+                        <p>5%</p>
+                        <p class="note">(Скидка суммируется с другими скидками продавца)</p>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <p>Папа карло (мебель своими руками и ногами)</p><a class="links" href="www.papakarlo.by" target="_blank">www.papakarlo.by</a>
+                      </div>
+                      <div>
+                        <p>15%-20%</p>
+                        <p class="note"></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <p>Кухни Зов</p><a class="links" href="www.zov-minsk.by" target="_blank">www.zov-minsk.by</a>
+                      </div>
+                      <div>
+                        <p>5%</p>
+                        <p class="note"></p>
+                      </div>
+                    </li>
+          </ul>
         </div>
       </section>
       <section class="title-back_link">
