--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -23,6 +23,8 @@
         <li><a href="/" style="true">Главная </a></li>
         <li><a href="/foto-gallery.html">Фотогалерея</a></li>
         <li><a href="/about-quarter.html">О квартале</a></li>
+        <li><a href="/price.html">Цена</a></li>
+        <li><a href="/loyalty-program.html">Программа лояльности</a></li>
       </ul>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
