--- a/src/pug/map.pug
+++ b/src/pug/map.pug
@@ -14,6 +14,10 @@ block content
 			a(href='/foto-gallery.html') Фотогалерея
 		li
 			a(href='/about-quarter.html') О квартале
+		li
+			a(href='/price.html') Цена
+		li
+			a(href='/loyalty-program.html') Программа лояльности
 
 			
 
