--- a/src/pug/foto-gallery.pug
+++ b/src/pug/foto-gallery.pug
@@ -38,13 +38,7 @@ block content
 			-for(var i = 0; i<5; i++)
 				+foto(i+1)
 
-	section.title-back_link
-		div.back_link
-			a(href = '/') 
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 135 100"><path d="m43.49579,3.54208c1.87973,-1.87971 4.83902,-1.87971 6.71872,0c1.81622,1.81622 1.81622,4.83902 0,6.651l-34.06784,34.06787l112.41928,0c2.62061,0 4.77127,2.08295 4.77127,4.70354c0,2.62061 -2.15067,4.77129 -4.77127,4.77129l-112.41928,0l34.06784,34.00435c1.81622,1.87971 1.81622,4.90675 0,6.71873c-1.8797,1.87973 -4.83899,1.87973 -6.71872,0l-42.13289,-42.13287c-1.81622,-1.81622 -1.81622,-4.83902 0,-6.651l42.13289,-42.1329l0,-0.00001z" stroke-width="0"/></svg>
-				span  Назад на главную
-	
-	
+	include includes/_link_back
 	include includes/_footer
 	
 
