'add(page_contact)_fix_block(how_to_get)'

--- a/bitrix/templates/main/map.html
+++ b/bitrix/templates/main/map.html
@@ -25,6 +25,7 @@
         <li><a href="/about-quarter.html">О квартале</a></li>
         <li><a href="/price.html">Цена</a></li>
         <li><a href="/loyalty-program.html">Программа лояльности</a></li>
+        <li><a href="/contacts.html">Отдел продаж</a></li>
       </ul>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
