--- a/src/pug/map.pug
+++ b/src/pug/map.pug
@@ -18,6 +18,8 @@ block content
 			a(href='/price.html') Цена
 		li
 			a(href='/loyalty-program.html') Программа лояльности
+		li
+			a(href='/contacts.html') Отдел продаж
 
 			
 
