'page_news_and_news-one'

--- a/bitrix/templates/main/index.html
+++ b/bitrix/templates/main/index.html
@@ -169,51 +169,54 @@
           </div>
         </div>
       </section>
-      <section class="title-map_and_contact"></section>
-      <div class="sales-dep">
-        <h3 class="sales-dep_title">Отдел продаж</h3>
-        <div class="block-contact">
-          <ul>
-            <li>Адрес</li>
-            <li>ул. Леонардо Да Винчи, 2</li>
-            <li>д. Копище, Минский р-н</li>
-          </ul>
-          <ul>
-            <li>Телефоны</li>
-            <li>+375 29 300-00-00</li>
-            <li>+375 29 300-00-00</li>
-            <li>+375 29 300-00-00</li>
-          </ul>
-          <ul>
-            <li>Режим работы</li>
-            <li>ПН...ПТ 8:30 &mdash; 20:00</li>
-            <li>CБ, BC 10:00 &mdash; 16:00</li>
-          </ul>
-        </div>
-      </div>
-      <div class="map">
-        <div id="map" style="width: 100%; height: 400px; margin-bottom: 30px"></div><a src="">
-                <button class="btn btn-green_border btn-uppercase">построить маршрут</button></a>
-      </div>
-      <div class="how_to_get">
-        <p>Как добраться</p>
-        <div class="accordion">
-          <div class="accordion-item">
-            <div id="transport"><span class="read-other read-other_black">Общественный транспорт</span></div>
-            <div class="read-other__close" id="transport-open">
-              <h3>Автобусы, Троллейбусы</h3>
-              <p>34 3643 783742</p>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <div id="auto"> <span class="read-other read-other_black">Автомобиль</span></div>
-            <div class="read-other__close" id="auto-open">
-              <h3>Автобусы, Троллейбусы</h3>
-              <p>34 3643 783742</p>
-            </div>
+      <section class="title-map_and_contact">
+        <div class="sales-dep">
+          <h3 class="sales-dep_title">Отдел продаж</h3>
+          <div class="block-contact">
+            <ul>
+              <li>Адрес</li>
+              <li>ул. Леонардо Да Винчи, 2</li>
+              <li>д. Копище, Минский р-н</li>
+            </ul>
+            <ul>
+              <li>Телефоны</li>
+              <li>+375 29 300-00-00</li>
+              <li>+375 29 300-00-00</li>
+              <li>+375 29 300-00-00</li>
+            </ul>
+            <ul>
+              <li>Режим работы</li>
+              <li>ПН...ПТ 8:30 &mdash; 20:00</li>
+              <li>CБ, BC 10:00 &mdash; 16:00</li>
+            </ul>
           </div>
         </div>
-      </div>
+        <div class="map">
+          <div id="map" style="width: 100%; height: 400px; margin-bottom: 30px"></div><a src="">
+                  <button class="btn btn-green_border btn-uppercase">построить маршрут</button></a>
+        </div>
+      </section>
+      <section class="how_search">
+        <div class="how_to_get">
+          <p>Как добраться</p>
+          <div class="accordion">
+            <div class="accordion-item">
+              <div id="transport"><span class="read-other read-other_black">Общественный транспорт</span></div>
+              <div class="read-other__close" id="transport-open">
+                <h3>Автобусы, Троллейбусы</h3>
+                <p>34 3643 783742</p>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div id="auto"> <span class="read-other read-other_black">Автомобиль</span></div>
+              <div class="read-other__close" id="auto-open">
+                <h3>Автобусы, Троллейбусы</h3>
+                <p>34 3643 783742</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
           <li> 
