--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -6,7 +6,9 @@
 @import lib/variables
 @import lib/slick
 @import lib/fancybox
-
+@import lib/jquery-ui/jquery-ui
+@import lib/jquery-ui/jquery-ui-structure
+@import lib/jquery-ui/jquery-ui-theme
 
 //
 @import primary
@@ -17,5 +19,6 @@
 @import price
 @import loyalty
 @import news
+@import filters
 @import menu
 @import media
