--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -443,6 +443,12 @@
 .btn-white {
 	background-color: #fff;
 	color: $prime-color;
+	border: 1px solid #fff;
+}
+.btn-white_white-border {
+	border: 1px solid #fff;
+	color: #fff;
+	background-color: rgba(0,0,0,0); 
 }
 .btn-opasity {
 	background-color: rgba(0,0,0,0);
@@ -471,6 +477,9 @@
 	background-color: rgba(0,0,0,0);
 	color: $grey;
 }
+.btn-text_dark-green {
+	color: #757e1f;
+}
 
 //end button
 
@@ -491,6 +500,8 @@
 	padding: 0 12.5px;
 }
 
+
+//
 .menu_mobile {
 	position: fixed;
 	z-index: 100;
@@ -503,3 +514,44 @@
     display: none;
 }
 .menu_mobile-close { display: block; }
+
+
+//ui-slider
+
+.ui-slider-horizontal {
+	height: 5px;
+}	
+.ui-widget.ui-widget-content {
+	border: none;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default {
+	border: 5px solid #fff;
+	background-color: #757e1f;
+	border-radius: 50%;
+}
+.ui-slider-horizontal .ui-slider-handle  {
+	top: -.5em;
+}
+.ui-widget-content {
+	background-color: #757e1f;
+	color: #fff;
+}
+.ui-widget-header  {
+	background-color: #fff;
+}
+
+
+//ui-select
+
+.ui-button,.ui-button:hover,.ui-button:focus {
+	background-color: $prime-color;
+	color: #757e1f;
+	border: 1px solid #fff;
+}
+
+.ui-state-active, .ui-widget-content .ui-state-active {
+	background-color: #fff;
+	border: 1px solid #fff;
+	color: #757e1f;
+}
